--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ sudo: false
 
 python:
   - "3.6"
-  - "3.7"
 
 install:
-  - pip install .
+  - pip install ".[test]"
 
-script: xvfb-run timeview
+script: pytest .
