--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,9 @@ python:
 install:
   - pip install ".[test]"
 
-script: pytest .
+# before_script:
+#   - "export DISPLAY=:99.0"
+#   - "sh -e /etc/init.d/xvfb start"
+#   - sleep 3 # give xvfb some time to start
+
+script: xvfb-run make pytest
