updated travis build ...again

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
 #   - "sh -e /etc/init.d/xvfb start"
 #   - sleep 3 # give xvfb some time to start
 
-script: xvfb-run make pytest
+script: xvfb-run pytest
