--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ install:
 build: off
 
 test_script:
-  -  "build.cmd %PYTHON%\\python.exe -m pytest -v tests/"
+  -  "PYTHON%\\python.exe -m pytest -v tests/"
 
 artifacts:
   - path: dist\*
