--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ numpy = ">=1.14,<=1.15"
 pyqtgraph = ">=0.10.0"
 scipy = ">=1.1.0"
 pyEDFlib = ">=0.1.12"
-"PyQt5" = "<=5.12,>=5.10.1"
+PyQt5 = "<=5.12,>=5.10.1"
 QtAwesome = ">=0.4.4"
 QtPy = ">=1.4.2"
 SQLAlchemy = ">=1.2.9"
