--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,12 +25,13 @@ install:
   # about it being out of date.
   - "python -m pip install --upgrade pip"
   
-  - "pip install -e .[test]"
+  - "pip install .[test]"
 
 build: off
 
 test_script:
   -  "%PYTHON%\\python.exe -m pytest -v ."
+  -  "%PYTHON%\\python.exe -m black . --check"
 
 artifacts:
   - path: dist\*
