--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,14 @@
 [flake8]
-max-line-length = 119
+max-line-length = 120
+exclude = 
+    .eggs
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    old,
+    build,
+    dist
+
 
 [mypy]
 python_version=3.6
@@ -33,7 +42,6 @@ warn_unused_ignores=True
 
 [aliases]
 test=pytest
-
 
 [tool:pytest]
 adopts = --verbose
