--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
     hooks:
     - id: black
       language_version: python3.6
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.620  # Use the sha / tag you want to point at
-    hooks:
-    -   id: mypy
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v0.620  # Use the sha / tag you want to point at
+#     hooks:
+#     -   id: mypy
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.4.0  # Use the ref you want to point at
     hooks:
