--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,8 @@ SQLAlchemy = ">=1.2.9"
 pytest = ">=3.6.2"
 pytest-qt = ">=2.4.1"
 pytest-runner = ">=4.2"
-timeview = {editable = true, path = "."}
+flake8-mypy = ">=17.8.0"
+flake8-bugbear = ">=18.2.0"
 
 [requires]
 python_version = "3.6"
