--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,9 +21,8 @@ install:
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
   - "python -m pip install --upgrade pip"
-  
-  - "pip install .[test]"
-  - "pip install .[dev]"
+  - "pip install pipenv --upgrade-strategy=only-if-needed"
+  - "pipenv --python=3.6 install --dev"
 
 build: off
 
