--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,9 +27,9 @@ install:
 build: off
 
 test_script:
-  -  "%PYTHON%\\python.exe -m pytest -v ."
-  -  "%PYTHON%\\python.exe -m black . --check"
-  -  "%PYTHON%\\python.exe -m flake8"
+  -  "pipenv run pytest -v ."
+  -  "pipenv run black . --check"
+  -  "pipenv run flake8"
 
 artifacts:
   - path: dist\*
