--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 120
-ignore = E203, E266, E501, W503
+ignore = E203, E266, E501, W503, B950
 exclude = 
     .eggs
     .git,
@@ -50,3 +50,6 @@ test=pytest
 [tool:pytest]
 adopts = --verbose
 python_files = tests/*.py
+
+[bdist_wheel]
+python-tag = py36
