I don't know how to tell CI to install properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - git clone --depth 1 git://github.com/astropy/ci-helpers.git
   - source ci-helpers/travis/setup_conda.sh
   - "pip install pipenv --upgrade-strategy=only-if-needed"
-  - "pipenv --python=3.6 install --dev"
+  - "pipenv --python=3.6 install --dev ."
 
 script: 
   - pipenv run python --version 
