--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
   # about it being out of date.
   - "python -m pip install --upgrade pip"
   - "pip install pipenv --upgrade-strategy=only-if-needed"
-  - "pipenv --python=3.6 install --dev"
+  - "pipenv --python=3.6 install --dev ."
 
 build: off
 
