--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
     - MAIN_CMD='python setup.py'
     - SETUP_CMD='test -v'
     - SETUP_XVFB=true
+    - PIPENV_IGNORE_VIRTUALENVS=1
+
 
 matrix:
   include:
