removing flake8 from appveyor because no idea what's happening, removed pytest plugin reference because travis was complaining

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,14 @@ script:
 notifications:
   on_success: change
   on_failure: always
+
+skip_commits:
+  files:
+    - docs/**/*
+    - '**/*.rst'
+    - '*.md'
+    - .gitignore
+    - .travis.yml
+    - 
+    - LICENSE.txt
+
