--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ exclude =
     docs/source/conf.py,
     old,
     build,
-    dist
+    dist,
+    ci-helpers
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
 classmethod-decorators=declared_attr
