--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 120
 ignore = E203, E266, E501, W503, B950
-exclude = 
+exclude =
     .eggs
     .git,
     __pycache__,
@@ -50,7 +50,8 @@ test=pytest
 
 [tool:pytest]
 adopts = --verbose
-python_files = tests/*.py
+python_files = tests/*/*.py
+qt_api=pyqt5
 
 [bdist_wheel]
 python-tag = py36
