Moving to a Python 3.7 target - adding cython to dependencies to pyedflib builds (#5)
* adding cython to dependency list allows for pyedflib to build

* updated target build to python 3.7 on CI services

* configured pipenv on travis to ignore existing virtual environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 
 env:
   global:
-    - PYTHON_VERSION=3.6
+    - PYTHON_VERSION=3.7
     - TEST_CMD='python -m pytest -vv -s tests'
     - MAIN_CMD='pipenv run'
     - SETUP_XVFB=true
@@ -23,7 +23,7 @@ install:
   # Install TimeView
   - source activate test
   - pip install pipenv --upgrade-strategy=only-if-needed
-  - pipenv --python=3.6 install --dev .
+  - pipenv install --dev .
 
 script:
   - $MAIN_CMD python --version
