--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,16 @@
 environment:
   global:
-    PYTHON: "C:\\Python37-x64"
-    PLATFORM: x64
     PYTEST_QT_API: "pyqt5"
+
+  matrix:
+    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
+
+platform:
+  -x64
+
+matrix:
+  fast_finish: true
 
 install:
   - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
@@ -23,7 +31,7 @@ install:
   # about it being out of date.
   - "python -m pip install --upgrade pip"
   - "pip install pipenv --upgrade-strategy=only-if-needed"
-  - "pipenv --python=3.7 install --dev ."
+  - "pipenv install --dev ."
   - "pipenv run pip list"
   - "pipenv run pip install colorama"  # this was apparently missing for some reason
 
@@ -37,3 +45,12 @@ artifacts:
   - path: dist\*
 
 skip_tags: true
+
+skip_commits:
+  files:
+    - docs/**/*
+    - "**/*.rst"
+    - "*.md"
+    - ".gitignore"
+    - ".travis.yml"
+    - LICENSE.txt
