adding skip existing optional tag so my build don't needlessly blow up

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ deploy:
   user: j9ac9k
   password: $PYPI_PASSWORD
   distributions: "sdist bdist_wheel"
+  skip_existing: true
   on:
     tags: true
     repo: j9ac9k/timeview
