--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,16 @@
 environment:
   global:
-    PYTHON: "C:\\Python36-x64"
-    ARCH: "64"
+    PYTEST_QT_API: "pyqt5"
+
+  matrix:
+    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 platform:
   -x64
+
+matrix:
+  fast_finish: true
 
 install:
   - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
@@ -20,19 +26,31 @@ install:
   # Check that we have the expected version and architecture for Python
   - "python --version"
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
-  
+
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
   - "python -m pip install --upgrade pip"
-  
-  - "pip install -e .[test]"
+  - "pip install pipenv --upgrade-strategy=only-if-needed"
+  - "pipenv install --dev ."
+  - "pipenv run pip list"
+  - "pipenv run pip install colorama"  # this was apparently missing for some reason
 
-build: off
+build: false
 
 test_script:
-  -  "%PYTHON%\\python.exe -m pytest -v ."
+  -  "pipenv run python -m pytest -vv -s tests"
+  -  "pipenv run black . --check"
 
 artifacts:
   - path: dist\*
 
 skip_tags: true
+
+skip_commits:
+  files:
+    - docs/**/*
+    - "**/*.rst"
+    - "*.md"
+    - ".gitignore"
+    - ".travis.yml"
+    - LICENSE.txt
